--- a/register/src/app/user-register/user-register.component.css
+++ b/register/src/app/user-register/user-register.component.css
@@ -1,7 +1,7 @@
 form {
   margin: 40px auto;
   background: #ffffff;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
   border-radius: 12px;
   padding: 30px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
